# grafeia

./: .gitignore  Cargo.toml  README.md
app/: Cargo.toml
app/src/: app.rs  browser.rs  build.rs  export.rs  gl.rs  lib.rs  net.rs  server.rs  view.rs  webgl.rs
app/src/export/: docx.rs  mod.rs
app/src/import/: markdown.rs  mod.rs
convert/: Cargo.toml
convert/src/: build.rs  lib.rs
convert/src/export/: docx.rs
core/: Cargo.toml
core/src/: builder.rs  content.rs  document.rs  draw.rs  gen.rs  hyphenation.rs  lib.rs  modes.rs  net.rs  object.rs  storage.rs  text.rs  units.rs
core/src/layout/: columns.rs  flex.rs  glue.rs  mod.rs  writer.rs
core/src/object/: code.rs  mod.rs  svg.rs  tex.rs
data/dictionaries/: en-gb.standard.bincode
gui/: Cargo.toml
gui/src/: app.rs  main.rs  view.rs
server/: Cargo.toml
server/src/: main.rs
web/: Cargo.toml  diag.html  diag.js  index.html  index.js  style.css
web/src/: lib.rs
