[workspace]
members = [
    "core",
    "gui",
    "app",
    "web",
]

[profile.dev]
opt-level = 1

[profile.release]
lto = "fat"
panic = "abort"

[patch."https://github.com/s3bk/winit"]
winit = { path = "../winit", features = ["web-sys"]}

[patch."https://github.com/s3bk/pathfinder_view"]
pathfinder_view = { path = "../pathfinder_view"}

[patch."https://github.com/s3bk/pathfinder"]
pathfinder_gl = { path = "../pathfinder/gl"}
pathfinder_webgl = { path = "../pathfinder/webgl"}
pathfinder_gpu = { path = "../pathfinder/gpu"}
pathfinder_content = { path = "../pathfinder/content"}
pathfinder_color = { path = "../pathfinder/color"}
pathfinder_geometry = { path = "../pathfinder/geometry"}
pathfinder_renderer = { path = "../pathfinder/renderer"}
pathfinder_resources = { path = "../pathfinder/resources"}
pathfinder_simd = { path = "../pathfinder/simd"}
pathfinder_svg = { path = "../pathfinder/svg"}

