[package]
name = "grafeia_app"
version = "0.1.0"
authors = ["Sebastian K <s3bk@protonmail.com>"]
edition = "2018"

[dependencies]
grafeia_core = { path = "../core" }
pathfinder_content = { git = "https://github.com/s3bk/pathfinder/" }
pathfinder_geometry = { git = "https://github.com/s3bk/pathfinder/" }
pathfinder_gpu = { git = "https://github.com/s3bk/pathfinder/" }
pathfinder_renderer = { git = "https://github.com/s3bk/pathfinder/" }
vector = { git = "https://github.com/s3bk/vector/" }
font = { git = "https://github.com/pdf-rs/font" }

cfg-if = "*"
euclid = "0.19"
log = "0.4.8"
winit = { git = "https://github.com/s3bk/winit", features = ["web-sys"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "*"
unicode-segmentation = "1.6.0"
bincode = "*"

[target.'cfg(target_arch="wasm32")'.dependencies]
pathfinder_webgl = { git = "https://github.com/s3bk/pathfinder/" }
web-sys = { version = "*", features = ["HtmlCanvasElement", "Window", "Document", "WebGl2RenderingContext"] }
wasm-bindgen = "*"

[target.'cfg(target_os="linux")'.dependencies]
pathfinder_gl = { git = "https://github.com/s3bk/pathfinder/" }
fst = "*"
gl = "0.6"
glutin = "0.22.0"