[package]
name = "grafeia_app"
version = "0.1.0"
authors = ["Sebastian K <s3bk@protonmail.com>"]
edition = "2018"

[features]
pan = []

[dependencies]
grafeia_core = { path = "../core" }
pathfinder_content = { git = "https://github.com/s3bk/pathfinder/" }
pathfinder_geometry = { git = "https://github.com/s3bk/pathfinder/" }
pathfinder_gpu = { git = "https://github.com/s3bk/pathfinder/" }
pathfinder_renderer = { git = "https://github.com/s3bk/pathfinder/" }
pathfinder_export = { git = "https://github.com/s3bk/pathfinder/" }
vector = { git = "https://github.com/s3bk/vector/" }
font = { git = "https://github.com/pdf-rs/font" }
unicode_categories = "*"

cfg-if = "*"
winit = { git = "https://github.com/s3bk/winit", features = ["web-sys"] }
serde = { version = "1.0", features = ["derive"] }
unicode-segmentation = "1.6.0"
bincode = "*"
pathfinder_view = { git = "https://github.com/s3bk/pathfinder_view" }
log = "0.4.8"
docx = "*"

[target.'cfg(target_arch="wasm32")'.dependencies]
web-sys = { version = "*", features = ["Storage", "Window"] }
wasm-bindgen = "*"
serde_json = "*"
base64  = "*"

[target.'cfg(not(target_arch="wasm32"))'.dependencies]
futures = { version = "0.1" }
tokio = { version = "0.1", default-features = false, features = ["codec", "tcp", "rt-full"] }
websocket = { path = "../../rust-websocket" }
