[package]
name = "grafeia_app"
version = "0.1.0"
authors = ["Sebastian K <s3bk@protonmail.com>"]
edition = "2018"

[dependencies]
grafeia_core = { path = "../core" }
pathfinder_content = { git = "https://github.com/s3bk/pathfinder/" }
pathfinder_geometry = { git = "https://github.com/s3bk/pathfinder/" }
pathfinder_gpu = { git = "https://github.com/s3bk/pathfinder/" }
pathfinder_renderer = { git = "https://github.com/s3bk/pathfinder/" }
pathfinder_export = { git = "https://github.com/s3bk/pathfinder/" }
vector = { git = "https://github.com/s3bk/vector/" }
font = { git = "https://github.com/pdf-rs/font" }
unicode_categories = "*"
futures = "0.3"

cfg-if = "*"
serde = { version = "1.0", features = ["derive"] }
unicode-segmentation = "1.6.0"
bincode = "*"
pathfinder_view = { git = "https://github.com/s3bk/pathfinder_view" }
log = "0.4.8"

[target.'cfg(target_arch="wasm32")'.dependencies]
web-sys = { version = "*", features = ["Storage", "Window", "Performance"] }
wasm-bindgen = { version = "*" }
serde_json = "*"
base64  = "*"
js-sys = "*"

[target.'cfg(not(target_arch="wasm32"))'.dependencies]
websocket = "*"
env_logger = "*"