[package]
name = "grafeia_core"
description = "γραφείο – core"
version = "0.1.0"
authors = ["Sebastian K <s3bk@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
[dependencies]
slotmap = { version = "0.4.0", features = ["unstable", "serde"] }
indexmap = { version = "1.3.1", features = ["serde-1"]}
#fst = "*"
font = { git = "https://github.com/pdf-rs/font" }
pathfinder_geometry = { git = "https://github.com/s3bk/pathfinder/" }
pathfinder_content = { git = "https://github.com/s3bk/pathfinder/" }
pathfinder_renderer = { git = "https://github.com/s3bk/pathfinder/" }
pathfinder_export = { git = "https://github.com/s3bk/pathfinder/" }
vector = { git = "https://github.com/s3bk/vector/" }
serde = { version = "1.0", features = ["derive"] }
