[package]
name = "grafeia_core"
description = "γραφείο – core"
version = "0.1.0"
authors = ["Sebastian K <s3bk@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indexmap = { version = "1.3.1", features = ["serde-1"]}
font = { git = "https://github.com/pdf-rs/font" }
pathfinder_geometry = { git = "https://github.com/s3bk/pathfinder/" }
pathfinder_content = { git = "https://github.com/s3bk/pathfinder/" }
pathfinder_color = { git = "https://github.com/s3bk/pathfinder/" }
pathfinder_renderer = { git = "https://github.com/s3bk/pathfinder/" }
pathfinder_export = { git = "https://github.com/s3bk/pathfinder/" }
pathfinder_svg = { git = "https://github.com/s3bk/pathfinder/" }
vector = { git = "https://github.com/s3bk/vector/", features = ["impl_pathfinder"] }
rex = { path = "../rex" }
serde = { version = "1.0", features = ["derive", "rc"] }
log = "0.4.8"
usvg = { version = "0.9", default-features = false }
bincode = "*"
lazy_static = "1.4.0"
itertools = "0.8.2"
unicode_categories = "*"
unicode-segmentation = "*"
hyphenation = { git = "https://github.com/s3bk/hyphenation" }
instant = { version = "*", features = ["now"] }
