[package]
name = "grafeia_gui"
description = "γραφείο – gui"
version = "0.1.0"
authors = ["Sebastian K <s3bk@protonmail.com>"]
edition = "2018"

[profile.dev]
opt-level = 1

[dependencies]
grafeia_app = { path = "../app", features = ["import_markdown", "export_docx"] }
pathfinder_view = { git = "https://github.com/s3bk/pathfinder_view" }
env_logger = "*"
[profile.release]