[package]
name = "web"
version = "0.1.0"
authors = ["Sebastian K <s3bk@protonmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
grafeia_app = { path = "../app" }
wasm-bindgen = "0.2.48"
web-sys = { version = "*", features=["console"]}
log = "0.4.8"
console_log = "*"
#log2 = { git = "https://github.com/s3bk/log2" }
#console_error_panic_hook = "*"
