[package]
name = "grafeia_web"
version = "0.1.0"
authors = ["Sebastian K <s3bk@protonmail.com>"]
edition = "2018"
description = "γραφείο – web"

[lib]
crate-type = ["cdylib"]

[dependencies]
grafeia_app = { path = "../app" }
grafeia_core = { path = "../core" }
wasm-bindgen = "0.2.48"
web-sys = { version = "*", features=["console"]}
js-sys = "*"
console_log = "*"
log = "0.4.8"
console_error_panic_hook = "*"
pathfinder_view = { git = "https://github.com/s3bk/pathfinder_view" }
